--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@
 }
 
 body {
-    background-color: var(--background);
+    background-color: var(--background-color);
     color:  var(--text);
 }
 
